# tssig

./: .gitignore  README.md  pyproject.toml
src/seqsign/: __init__.py
src/tssig/: cli.py  util.py
src/tssig/commands/: verify.py
src/tssign/: cli.py  util.py
src/tssign/commands/: sign.py
tests/: test_util.py
